# allegro-4.2.2-xc

./: dos-crossfile  meson.build
